--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "todo-list",
+    "name": "todolist-in-class-cool-ranch-doritos",
     "version": "1.0.0",
     "description": "This is a pair programming class assignment.",
     "main": "app.js",
